refactor: replace Math.max and Math.min with Math.clamp for freeTickets in PoiRecord